<resources>
    <string name="app_name">RealEstate</string>
    <string name="welcome">Welcome Back! Please login to your account now.</string>
    <string name="user_name">Enter your Email Address</string>
    <string name="password">Enter your Password</string>
    <string name="rember">Remember Me</string>
    <string name="forget">Forget Password ?</string>
    <string name="login">Log In</string>
    <string name="backtologin">Back To Login ?</string>
    <string name="submit">Submit</string>
    <string name="new_registration">New User...Register Here ?</string>
    <string name="welcome_register">Create an account to find the best Property for you.</string>
    <string name="full_name">Your Good Name</string>
    <string name="terms"><![CDATA[I\'ve read and accept terms & conditions]]></string>
    <string name="singup">Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="buy">Buy</string>
    <string name="rent">Rent</string>
    <string name="agent">Agent</string>
    <string name="feature">Featured Properties</string>
    <string name="contact">Contact Us</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject*</string>
    <string name="message">Your Message*</string>
    <string name="top_properties">Top Properties</string>
    <string name="post_properties">Post Property</string>
    <string name="genral_info">Genral Info</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="property_info">Property Info</string>
    <string name="aminties">Amenities</string>
    <string name="nearby">NearBy Place</string>
    <string name="gallery">Gallery</string>
    <string name="about_us">About Us</string>
    <string name="privacy">Privacy Policy</string>
    <string name="refund">Refund Policy</string>
    <string name="setting">Settings</string>
    <string name="share">Share</string>
    <string name="change_pass">Change Password</string>
    <string name="edit_profile">Update Profile</string>
    <string name="notification">Notification</string>
    <string name="welcome_change_pass">Create your New Passworda to find the best Property for you. </string>
    <string name="backtohome">Back to Home ?</string>
    <string name="Oldpass">Enter your old Password</string>
    <string name="newpass">Enter your New Password</string>
    <string name="confirmpass">Confirm your password</string>
    <string name="Address">Enter your Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="update">Update</string>
    <string name="zipcode">Postal Code</string>
    <string name="logout">Logout</string>
    <string name="logout_text">Are you sure do you want to logged out ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="verifiymobile">Verify Your Mobile*</string>
    <string name="otp">Enter otp recevied on your mobile no.</string>
    <string name="website">Welcome to Truehomes24.com</string>
    <string name="popular_search">Popular Searches</string>
    <string name="quick_link">Quick Links</string>
    <string name="filter">  Filter </string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="nearbylocation">Near By</string>
    <string name="breif">POSH 3BHK APARTMENT AT VERY PRIME LOCATION.BBCL Ananya FIVE FURLONG ROAD GUINDY CHENNAI, Velachery, Chennai - South, Tamil Nadu. Lift, Reserved Parking, Security</string>
    <string name="other">Others</string>
    <string name="Something_worng">Something went worng</string>
    <string name="Otp_screen_description">Create an account to find the best Property for you.</string>
    <string name="verify_text">Verify your mobile number: </string>
    <string name="dummy_no">+91-1234567890</string>
    <string name="otp_hint">Enter otp recieved on your mobile</string>
    <string name="button_text_otp">VERIFY OTP</string>
    <string name="post_1">Sell or Rent</string>
    <string name="post_2">your property</string>
    <string name="post_3">We have over 15 Lac buyers and tenants for you!</string>
    <string name="post_4">You are posting this property for</string>
    <string name="post_5">\u20B9</string>
    <string name="rate">\u20B9  8.13 - 9.94 Cr</string>
    <string name="post_6">FREE !</string>
    <string name="post_7">Free Professional Photoshoot</string>
    <string name="post_8">Get Contact Details of upto 5 Responses</string>
    <string name="post_9"><![CDATA[Access to 15 Lac Buyers & Tenants]]></string>
    <string name="pos_10">Get 10X more Responses by just</string>
    <string name="btn_continue">Continue</string>
    <string name="pos_11"><![CDATA[Applicable only for property owner & not Agent.]]></string>
    <string name="start_text">Lets start by knowing you better</string>
    <string name="i_am_owner">I am an Owner</string>
    <string name="i_am_agent">I am an Agent</string>
    <string name="i_am_builder">I am a Builder</string>
    <string name="contact_details">Enter your contact details</string>
    <string name="agent_connect">Help property seekers connect with you</string>
    <string name="agent_name">Name</string>
    <string name="agent_email">Email Id</string>
    <string name="agent_number">Phone Number</string>
    <string name="owner_name">Hi Test Owner , </string>
    <string name="owner_posting"> You are posting your property for :</string>
    <string name="sell">Sell</string>
    <string name="rent_lease">Rent / Lease</string>
    <string name="pg">PG</string>
    <string name="owner_property_type">What type of property is it ?</string>
    <string name="residential">Residential</string>
    <string name="commercial">Commercial</string>
    <string name="property_type">Property Type</string>
    <string name="flat_apartment">Flat / Apartment</string>
    <string name="house">House</string>
    <string name="villa">Villa</string>
    <string name="builder_floor">Builder Floor</string>
    <string name="plot">Plot</string>
    <string name="studio_apartment">Studio Apartment</string>
    <string name="panthouse">Pent House</string>
    <string name="farm_house">Farm House</string>
    <string name="office_space">Office Space</string>
    <string name="office_park">Office in IT Park / SEZ</string>
    <string name="shop">Shop</string>
    <string name="ShowRoom">Showroom</string>
    <string name="commercial_land">Commercial Land</string>
    <string name="wearhouse">Wearhouse / Godown</string>
    <string name="industrial">Industrial Land</string>
    <string name="industrial_building">Industrial Building</string>
    <string name="industrial_shed">Industrial Shed</string>
    <string name="agricultural">Agricultural Land</string>
    <string name="owner_property_location">Where is your property located</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_project">Enter Project / Society or Locality</string>
    <string name="optional_address">Enter Address (Optional)</string>
    <string name="register">Register</string>
    <string name="Buyer_Tenant_Registeration">Buyer/Tenant Registeration</string>
    <string name="search">Search</string>
    <string name="saved">Saved</string>
    <string name="alert">Alert</string>
    <string name="profile">Profile</string>
    <string name="owner_property_more_details">More details to get relevant buyers</string>
    <string name="unit_details">Unit Details</string>
    <string name="bedroom">Bedroom</string>
    <string name="bathroom">Bathroom</string>
    <string name="balcony">Balcony (optional)</string>
    <string name="txt_balcony">Balcony</string>
    <string name="floor_detail">Floor Details</string>
    <string name="floor_detail_total">Total Number of Floor in Building</string>
    <string name="floor">Floor</string>
    <string name="floor_property">Total Property Floor</string>
    <string name="floor_no">Floor No. of your Property</string>
    <string name="select">Select</string>
    <string name="floor_num">Floor No.</string>
    <string name="furnish">Furnishing</string>
    <string name="unfisnshing">Un-Furnished</string>
    <string name="semi_furnished">Semi-Furnished</string>
    <string name="fully_furnished">Fully-Furnished</string>
    <string name="property_Area">Property Area</string>
    <string name="property_either">Provide either Carpet Area or Super Area</string>
    <string name="cartpet">Carpet Area</string>
    <string name="sqft">Sqft</string>
    <string name="superArea">Super Area</string>
    <string name="receive_notification">I want to receive notifications</string>
    <string name="unit">Unit</string>
    <string name="owner_price_except">Price You Expect</string>
    <string name="enter_except_price">\u20B9 Enter Expected Price</string>
    <string name="enter_token_ammount">\u20B9 Enter Booking / Token Amount (optional)</string>
    <string name="select_brokerage">\u20B9 Select Brokerage</string>
    <string name="property_status">Status of your Property</string>
    <string name="txt_avaiable">Available Form</string>
    <string name="under_constraction">Under Construction</string>
    <string name="ready_to_move">Ready to Move</string>
    <string name="txt_date">MM/YY</string>
    <string name="txt_age">Age of construction</string>
    <string name="age_constraction">Age of Construction</string>
    <string name="owner_verification_mobile">Verify your number</string>
    <string name="send_digit">Enter the 6-digit verification code sent on</string>
    <string name="txt_owner_number">1234567890</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="txt_did_not_recieve">Didn\'t receive the OTP ?</string>
    <string name="txt_resend">Resend</string>
    <string name="txt_otp_call">Get OTP on Call</string>
    <string name="txt_select">Select Your Ad Package</string>
    <string name="txt_package_visible">Package Visible to % buyers</string>
    <string name="txt_validity">Validity</string>
    <string name="txtdummy_description">It was high time i had beed contacting dealers in my area. I was not getting many buyers. I bought the diamond package and could actually talk to the responses directly and sold it in no time.</string>
    <string name="xzy_user">XYZ USER</string>
    <string name="diamond_user">Diammond User</string>
    <string name="asearch_property">Search Property</string>
    <string name="no_saved_search">No saved search yet</string>
    <string name="you_havenot_saved_search">You haven\'t viewed any agent yet.</string>
    <string name="start_saved_shortlist">Start searching for agent</string>
    <string name="no_schedule">No Scheduled tour yet</string>
    <string name="you_schedule_have">You haven\'t scheduled any tour yet.</string>
    <string name="start_book_tour">Start searching to book a tour.</string>
    <string name="menu_buy_properties">Properties for Buy</string>
    <string name="menu_rent_properties">Properties for Rent</string>
    <string name="menu_new_properties">New Projects</string>
    <string name="menu_explore_properties">Explore Localities</string>
    <string name="advertise">Advertise with Us</string>
    <string name="feedback">FeedBack</string>
    <string name="rate_us">Rate Us</string>
</resources>