<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_saved"
        android:icon="@drawable/ic_favorite"
        android:title="@string/saved"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_alert"
        android:icon="@drawable/ic_notifications"
        android:title="@string/alert"
        app:showAsAction="always|withText" />

</menu>
