<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_8sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_10sdp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/user_profile" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:fontFamily="@font/arialmt"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/txtdummy_description"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/xzy_user"
            android:textColor="@color/black" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_diamond_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_user_name"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/diamond_user"
            android:textColor="@color/black" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>


