<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/edittext_style"
    android:layout_marginLeft="@dimen/_5sdp"
    android:layout_marginRight="@dimen/_5sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_marginBottom="@dimen/_5sdp"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/app_name"
            android:fontFamily="@font/arialmtbold"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/logout_text"
            android:fontFamily="@font/arialmtbold"
            android:paddingLeft="@dimen/_8sdp"
            android:textStyle="bold"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_13sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:layout_gravity="end"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:background="@drawable/btn_style_blue"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_20sdp"
                android:layout_gravity="end"
                android:gravity="end"
                android:layout_marginRight="@dimen/_20sdp"
                android:id="@+id/tvcancel"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_style_blue"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_20sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/yes"
                android:id="@+id/tvyes"
                android:textColor="@color/white"
                android:layout_marginRight="@dimen/_20sdp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
</LinearLayout>
